feat: add authentication, dash todos and modules strategy

--- a/app/Views/layout.phtml
+++ b/app/Views/layout.phtml
@@ -1,36 +1,57 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> Hello </title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title> Hello </title>
 
-    <link href="/assets/css/style.css" rel="stylesheet">
-    <link href="/assets/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/assets/toasty/dist/toasty.min.css" rel="stylesheet">
+  <link href="/assets/css/style.css" rel="stylesheet">
+  <link href="/assets/css/bootstrap.min.css" rel="stylesheet">
 </head>
+
 <body>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Listar <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Criar</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Sair</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+  <div class="container col-md-8">
+    <?php $this->content() ?>
+  </div>
 
-<?php $this->content() ?>
+  <script src="/assets/toasty/dist/toasty.min.js"> </script>
+  <script>
+    (function() {
+      const toast = new Toasty();
 
+      <?php if ($this->errors) :
+        foreach ($this->errors as $error) : ?>
+          toast.error("<?= $error ?>", 4000);
+      <?php endforeach;
+      endif;    ?>
 
-<script>
-    (function(){
-        const toast = new Toasty();
-
-        <?php if($this->errors):
-            foreach($this->errors as $error): ?>
-            toast.error("<?= $error ?>", 4000);
-        <?php endforeach;
-              endif;    ?>
-
-      <?php if($this->success):
-            foreach($this->success as $success): ?>
-            toast.success("<?= $success ?>", 4000);
-        <?php endforeach;
-              endif;    ?>
-    })(); 
-</script>
+      <?php if ($this->success) :
+        foreach ($this->success as $success) : ?>
+          toast.success("<?= $success ?>", 4000);
+      <?php endforeach;
+      endif;    ?>
+    })();
+  </script>
 </body>
+
 </html>
