--- a/app/Views/users/login.phtml
+++ b/app/Views/users/login.phtml
@@ -15,7 +15,7 @@
 </head>
 
 <body class="text-center">
-  <form class="form-signin" action="/users/signin" method="POST">
+  <form class="form-signin" action="/users/auth" method="POST">
     <h1 class="h3 mb-3 font-weight-normal">Faça login</h1>
 
     <label for="inputEmail" class="sr-only">Endereço de email</label>
@@ -31,76 +31,76 @@
     <p class="mt-5 mb-3 text-muted">&copy; 2017 - <?= date('Y') ?></p>
   </form>
   <style>
-  html,
-  body {
-    height: 100%;
-  }
+    html,
+    body {
+      height: 100%;
+    }
 
-  body {
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-align: center;
-    align-items: center;
-    padding-top: 40px;
-    padding-bottom: 40px;
-    background-color: #f5f5f5;
-  }
+    body {
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-align: center;
+      align-items: center;
+      padding-top: 40px;
+      padding-bottom: 40px;
+      background-color: #f5f5f5;
+    }
 
-  .form-signin {
-    width: 100%;
-    max-width: 330px;
-    padding: 15px;
-    margin: auto;
-  }
+    .form-signin {
+      width: 100%;
+      max-width: 330px;
+      padding: 15px;
+      margin: auto;
+    }
 
-  .form-signin .checkbox {
-    font-weight: 400;
-  }
+    .form-signin .checkbox {
+      font-weight: 400;
+    }
 
-  .form-signin .form-control {
-    position: relative;
-    box-sizing: border-box;
-    height: auto;
-    padding: 10px;
-    font-size: 16px;
-  }
+    .form-signin .form-control {
+      position: relative;
+      box-sizing: border-box;
+      height: auto;
+      padding: 10px;
+      font-size: 16px;
+    }
 
-  .form-signin .form-control:focus {
-    z-index: 2;
-  }
+    .form-signin .form-control:focus {
+      z-index: 2;
+    }
 
-  .form-signin input[type="email"] {
-    margin-bottom: -1px;
-    border-bottom-right-radius: 0;
-    border-bottom-left-radius: 0;
-  }
+    .form-signin input[type="email"] {
+      margin-bottom: -1px;
+      border-bottom-right-radius: 0;
+      border-bottom-left-radius: 0;
+    }
 
-  .form-signin input[type="password"] {
-    margin-bottom: 10px;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
-  }
-</style>
-<script src="/assets/toasty/dist/toasty.min.js"></script>
-<script>
-    (function(){
-        const toast = new Toasty();
+    .form-signin input[type="password"] {
+      margin-bottom: 10px;
+      border-top-left-radius: 0;
+      border-top-right-radius: 0;
+    }
+  </style>
+  <script src="/assets/toasty/dist/toasty.min.js"></script>
+  <script>
+    (function() {
+      const toast = new Toasty();
 
-        <?php if($this->errors):
-            foreach($this->errors as $error): ?>
-            toast.error("<?= $error ?>");
-        <?php endforeach;
-              endif;    ?>
+      <?php if ($this->errors) :
+        foreach ($this->errors as $error) : ?>
+          toast.error("<?= $error ?>");
+      <?php endforeach;
+      endif;    ?>
 
-      <?php if($this->success):
-            foreach($this->success as $success): ?>
-            toast.success("<?= $success ?>");
-        <?php endforeach;
-              endif;    ?>
+      <?php if ($this->success) :
+        foreach ($this->success as $success) : ?>
+          toast.success("<?= $success ?>");
+      <?php endforeach;
+      endif;    ?>
 
-        
+
     })();
-    
-</script>
+  </script>
 </body>
+
 </html>
