feat: add Eloquent and finished authentication

--- a/app/Views/users/login.phtml
+++ b/app/Views/users/login.phtml
@@ -19,9 +19,9 @@
     <h1 class="h3 mb-3 font-weight-normal">Faça login</h1>
 
     <label for="inputEmail" class="sr-only">Endereço de email</label>
-    <input type="email" id="inputEmail" class="form-control" placeholder="Seu email" autofocus>
+    <input type="email" id="inputEmail" class="form-control" name="email" placeholder="Seu email" autofocus>
     <label for="inputPassword" class="sr-only">Senha</label>
-    <input type="password" id="inputPassword" class="form-control" placeholder="Senha">
+    <input type="password" id="inputPassword" class="form-control" name="password" placeholder="Senha">
     <div class="checkbox mb-3">
       <label>
         <p>Não tem uma conta? <a href="/users/register">Crie uma</a></p>
